--- a/package.json
+++ b/package.json
@@ -1,29 +1,36 @@
 {
-  "name": "template-sveltekit",
-  "version": "0.0.1",
-  "description": "Template for Sveltekit Projects",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "release": "standard-version"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/bobthered/template-sveltekit.git"
-  },
-  "keywords": [
-    "svelte",
-    "sveltekit",
-    "template",
-    "sveltewind"
-  ],
-  "author": "Bob McAleavey <bobmcaleavey@gmail.com>",
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/bobthered/template-sveltekit/issues"
-  },
-  "homepage": "https://github.com/bobthered/template-sveltekit#readme",
-  "devDependencies": {
-    "standard-version": "^9.5.0"
-  }
+	"name": "template-sveltekit",
+	"version": "0.0.1",
+	"private": true,
+	"scripts": {
+		"dev": "vite dev",
+		"build": "vite build",
+		"preview": "vite preview",
+		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
+		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
+		"test": "vitest",
+		"lint": "prettier --check . && eslint .",
+		"format": "prettier --write .",
+    "release": "standard-version && git push --follow-tags origin main"
+	},
+	"devDependencies": {
+		"@sveltejs/adapter-auto": "^3.0.0",
+		"@sveltejs/kit": "^2.0.0",
+		"@sveltejs/vite-plugin-svelte": "^3.0.0",
+		"@types/eslint": "8.56.0",
+		"@typescript-eslint/eslint-plugin": "^6.0.0",
+		"@typescript-eslint/parser": "^6.0.0",
+		"eslint": "^8.56.0",
+		"eslint-config-prettier": "^9.1.0",
+		"eslint-plugin-svelte": "^2.35.1",
+		"prettier": "^3.1.1",
+		"prettier-plugin-svelte": "^3.1.2",
+		"svelte": "^4.2.7",
+		"svelte-check": "^3.6.0",
+		"tslib": "^2.4.1",
+		"typescript": "^5.0.0",
+		"vite": "^5.0.3",
+		"vitest": "^1.2.0"
+	},
+	"type": "module"
 }
