--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,7 +9,23 @@
 		"skipLibCheck": true,
 		"sourceMap": true,
 		"strict": true,
-		"moduleResolution": "bundler"
+		"moduleResolution": "bundler",
+		"paths": {
+		  "$actions": ["./src/actions"],
+		  "$actions/*": ["./src/actions/*"],
+		  "$components": ["./src/components"],
+		  "$components/*": ["./src/components/*"],
+		  "$icons": ["./src/icons"],
+		  "$icons/*": ["./src/icons/*"],
+		  "$lib": ["./src/lib"],
+		  "$lib/*": ["./src/lib/*"],
+		  "$stores": ["./src/stores"],
+		  "$stores/*": ["./src/stores/*"],
+		  "$transitions": ["./src/transitions"],
+		  "$transitions/*": ["./src/transitions/*"],
+		  "$utilities": ["./src/utilities"],
+		  "$utilities/*": ["./src/utilities/*"]
+		}
 	}
 	// Path aliases are handled by https://kit.svelte.dev/docs/configuration#alias
 	//
