--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
 		"prettier": "^3.1.1",
 		"prettier-plugin-svelte": "^3.1.2",
 		"prettier-plugin-tailwindcss": "^0.5.9",
+		"prisma": "^5.9.0",
 		"svelte": "^4.2.7",
 		"svelte-check": "^3.6.0",
 		"sveltewind": "^1.8.7",
