--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
 		"prettier-plugin-svelte": "^3.1.2",
 		"prettier-plugin-tailwindcss": "^0.5.9",
 		"prisma": "^5.9.0",
+		"standard-version": "^9.5.0",
 		"svelte": "^4.2.7",
 		"svelte-check": "^3.6.0",
 		"sveltewind": "^1.8.7",
