--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
 	"version": "0.0.2",
 	"private": true,
 	"scripts": {
-		"dev": "vite dev",
+		"dev": "npm run prisma:generate && npm run prisma:db:push && vite dev --host",
 		"build": "vite build",
 		"preview": "vite preview",
 		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
@@ -11,10 +11,13 @@
 		"test": "vitest",
 		"lint": "prettier --check . && eslint .",
 		"format": "prettier --write .",
-		"release": "standard-version && git push --follow-tags origin main"
+		"release": "standard-version && git push --follow-tags origin main",
+		"prisma:generate": "prisma generate",
+		"prisma:db:push": "npx prisma db push",
+		"postinstall": "npm run prisma:generate"
 	},
 	"devDependencies": {
-		"@prisma/client": "^5.9.0",
+		"@prisma/client": "^5.9.1",
 		"@sveltejs/adapter-auto": "^3.0.0",
 		"@sveltejs/kit": "^2.0.0",
 		"@sveltejs/vite-plugin-svelte": "^3.0.0",
@@ -22,6 +25,7 @@
 		"@typescript-eslint/eslint-plugin": "^6.0.0",
 		"@typescript-eslint/parser": "^6.0.0",
 		"autoprefixer": "^10.4.16",
+		"bcryptjs": "^2.4.3",
 		"eslint": "^8.56.0",
 		"eslint-config-prettier": "^9.1.0",
 		"eslint-plugin-svelte": "^2.35.1",
@@ -41,5 +45,8 @@
 		"vite": "^5.0.3",
 		"vitest": "^1.2.0"
 	},
-	"type": "module"
+	"type": "module",
+	"dependencies": {
+		"@types/bcryptjs": "^2.4.6"
+	}
 }
